dark mode fixes

--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,6 @@ body, header, main, nav, footer {
 }
 
 /* Color Scheme Preference */
-/* dark mode */
 @media (prefers-color-scheme: dark) {
     body {
         background-color: #1c1c1e;
@@ -270,8 +269,27 @@ body, header, main, nav, footer {
     nav, footer {
         background-color: #343a40;
     }
+    /* Dark Mode - Skip to Main Content button */
+    a.skip-to-content {
+        background-color: #32586F;
+        color: #f8f9fa; /* Light text for visibility */
+    }
+
+    /* Dark Mode - Table text color */
+    table, th, td {
+        color: black; /* Set table text to black for better contrast */
+    }
+
+    table th {
+        background-color: #d4ecfb; /* Optional - contrasting background for table headers */
+    }
+
+    table tr:nth-child(even) {
+        background-color: #333; /* Darken row backgrounds for contrast */
+    }
 }
-/* light mode (default) */
+
+
 @media (prefers-color-scheme: light) {
     body {
         background-color: #f8f9fa;
